--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
-    "tailwindcss": "^3.4.1",
     "swiper": "^11.0.7",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
