--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
     "swiper": "^11.1.4",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.1",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
